--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dawn.Guard" Version="$(DawnGuardVersion)" />
     <PackageReference Include="MediatR" Version="$(MediatrVersion)" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="$(MediatrExtensionsMicrosoftDependencyInjectionVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="$(MicrosoftAspNetCoreBlazorServerVersion)" />
