--- a/NuGet.config
+++ b/NuGet.config
@@ -4,6 +4,7 @@
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="System.CommandLine.Experimental" value="https://dotnet.myget.org/F/system-commandline/api/v3/index.json" />
+    <add key="DevExpress" value="https://nuget.devexpress.com/Gp8McVHREXO1kelkE8fuQm5OofPLlhoCcnGiVdQ2GIvvuWJS9F/api" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
