--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/.editorconfig
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/.editorconfig
@@ -250,3 +250,10 @@ dotnet_naming_symbols.local_functions.applicable_kinds = local_function
 
 dotnet_naming_style.local_function_style.capitalization = pascal_case
 
+
+#### Analyizer settings ####
+dotnet_code_quality.null_check_validation_methods = NotNull
+
+# CA1062: Validate arguments of public methods
+# TODO: Turn this back on when figure out how to get Dawn.Guard to not trigger it.
+dotnet_diagnostic.CA1062.severity = silent
