Run CodeMaid on whole sln.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/CodeMaid.config
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/CodeMaid.config
@@ -57,6 +57,9 @@
             <setting name="Reorganizing_MemberTypeEvents" serializeAs="String">
                 <value>Events||6||Events</value>
             </setting>
+            <setting name="Cleaning_InsertEndOfFileTrailingNewLine" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
