Add missing packages and using build props to set versions.
All tests pass here.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
@@ -29,7 +29,8 @@
     <MicrosoftAspNetCoreBlazorHttpClientVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreBlazorHttpClientVersion>
     <MicrosoftAspNetCoreBlazorServerVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreBlazorServerVersion>
     
-    <MicrosoftAspNetCoreVersion>3.1.0</MicrosoftAspNetCoreVersion>
+    <MicrosoftAspNetCoreVersion>3.1.0</MicrosoftAspNetCoreVersion>    
+    <MicrosoftAspNetCoreMvcTestingVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreMvcTestingVersion>
     <MicrosoftAspNetCoreMvcNewtonsoftJsonVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreMvcNewtonsoftJsonVersion>
     <MicrosoftAspNetCoreTestHostVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreTestHostVersion>
     <MicrosoftCodeAnalysisFxCopAnalyzersVersion>2.9.8</MicrosoftCodeAnalysisFxCopAnalyzersVersion>
@@ -46,6 +47,7 @@
     <SeleniumSupportVersion>3.141.0</SeleniumSupportVersion>
     <SeleniumWebDriverVersion>3.141.0</SeleniumWebDriverVersion>
     <ShouldlyVersion>3.0.2</ShouldlyVersion>
+    <SystemTextJsonVersion>4.7.0</SystemTextJsonVersion>
 
   </PropertyGroup>
 </Project>
