Updating TestingConvention to use WebApplicationFactory
Add package ref to support WebApplicationFactory
And add a CustomWebApplicationFactory for our Server
Add New Fetch tests to validate the BaseTest class and CustomWebApplicationFactory is working

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Tests/Client.Integration.Tests/TimeWarp.Blazor.Client.Integration.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Tests/Client.Integration.Tests/TimeWarp.Blazor.Client.Integration.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fixie" Version="$(FixieVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(MicrosoftAspNetCoreMvcTestingVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="$(MicrosoftAspNetCoreTestHostVersion)" />
     <PackageReference Include="Moq" Version="$(MoqVersion)" />
     <PackageReference Include="Scrutor" Version="$(ScrutorVersion)" />
