fix msBuild bug
add global.json for just this template.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Description>TimeWarp.Blazor Server</Description>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DisableImplicitComponentsAnalyzers>true</DisableImplicitComponentsAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
