--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/CodeMaid.config
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/CodeMaid.config
@@ -60,6 +60,9 @@
             <setting name="Cleaning_InsertEndOfFileTrailingNewLine" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
