--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Tests/Server.Integration.Tests/TimeWarp.Blazor.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Tests/Server.Integration.Tests/TimeWarp.Blazor.Server.Integration.Tests.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>$(TestProjectTargetFramework)</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Fixie" Version="$(FixieVersion)" />
+    <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(MicrosoftAspNetCoreMvcTestingVersion)" />
     <PackageReference Include="Shouldly" Version="$(ShouldlyVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="$(MicrosoftAspNetCoreTestHostVersion)" />
