--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
@@ -18,16 +18,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <TestProjectTargetFramework>netstandard2.1</TestProjectTargetFramework>
+    <TestProjectTargetFramework>netcoreapp3.1</TestProjectTargetFramework>
   </PropertyGroup>
 
   <!--Versions of packages used across the solution-->
   <PropertyGroup Label="Package Versions">
-    <MicrosoftAspNetCoreBlazorVersion>3.2.0-preview2.20160.5</MicrosoftAspNetCoreBlazorVersion>
+    <MicrosoftAspNetCoreBlazorVersion>3.2.0</MicrosoftAspNetCoreBlazorVersion>
     <MicrosoftAspNetCoreComponentsWebAssemblyVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreComponentsWebAssemblyVersion>
     <MicrosoftAspNetCoreComponentsWebAssemblyBuildVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreComponentsWebAssemblyBuildVersion>
     <MicrosoftAspNetCoreBlazorHttpClientVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreBlazorHttpClientVersion>
     <MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>
+    <SystemNetHttpJsonVersion>3.2.0</SystemNetHttpJsonVersion>
     
     <MicrosoftAspNetCoreVersion>3.1.4</MicrosoftAspNetCoreVersion>    
     <MicrosoftAspNetCoreMvcTestingVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreMvcTestingVersion>
@@ -39,6 +40,7 @@
     <DawnGuardVersion>1.12.0</DawnGuardVersion>
     <FixieVersion>2.2.1</FixieVersion>
     <FixieConsoleVersion>2.2.1</FixieConsoleVersion>
+    <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
     <MediatrExtensionsMicrosoftDependencyInjectionVersion>8.0.0</MediatrExtensionsMicrosoftDependencyInjectionVersion>
     <MediatrVersion>8.0.1</MediatrVersion>
     <MoqVersion>4.14.1</MoqVersion>
