Rename tests cases and git sucks and can't detect it
add documentation
start switching to csproj and dotnet pack vs nuget

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Client\TimeWarp.Blazor.Client.csproj" />
     <ProjectReference Include="..\Api\TimeWarp.Blazor.Api.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entities\X_Aggregate\Requests\" />
+  </ItemGroup>
 </Project>
