Direct reference to System.Configuration.ConfigurationManager added to prevent warning
"C:\git\github\TimeWarpEngineering\timewarp-templates\Source\TimeWarp.Blazor.Template\content\TimeWarp.Blazor\TimeWarp.Blazor.sln" (default target) (1:2) ->
       "C:\git\github\TimeWarpEngineering\timewarp-templates\Source\TimeWarp.Blazor.Template\content\TimeWarp.Blazor\Tests\Server.Integration.Tests\TimeWarp.Blazor.Server.Integration.Tests.csproj" (default target) (4:6) ->
       (ResolveAssemblyReferences target) ->
         C:\Program Files\dotnet\sdk\3.1.300\Microsoft.Common.CurrentVersion.targets(2081,5): warning MSB3277: Found conflicts between different versions of "System.Configuration.ConfigurationManager" that could not be resolved.  These reference conflicts are listed in the build log when log verbosity is set to detailed. [C:\git\github\TimeWarpEngineering\timewarp-templates\Source\TimeWarp.Blazor.Template\content\TimeWarp.Blazor\Tests\Server.Integration.Tests\TimeWarp.Blazor.Server.Integration.Tests.csproj]

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Tests/Server.Integration.Tests/TimeWarp.Blazor.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Tests/Server.Integration.Tests/TimeWarp.Blazor.Server.Integration.Tests.csproj
@@ -10,8 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(MicrosoftAspNetCoreMvcTestingVersion)" />
     <PackageReference Include="Shouldly" Version="$(ShouldlyVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="$(MicrosoftAspNetCoreTestHostVersion)" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="$(SystemConfigurationConfigurationManagerVersion)" />
     <DotNetCliToolReference Include="Fixie.Console" Version="$(FixieConsoleVersion)" />
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
