Direct reference to System.Configuration.ConfigurationManager added to prevent warning
"C:\git\github\TimeWarpEngineering\timewarp-templates\Source\TimeWarp.Blazor.Template\content\TimeWarp.Blazor\TimeWarp.Blazor.sln" (default target) (1:2) ->
       "C:\git\github\TimeWarpEngineering\timewarp-templates\Source\TimeWarp.Blazor.Template\content\TimeWarp.Blazor\Tests\Server.Integration.Tests\TimeWarp.Blazor.Server.Integration.Tests.csproj" (default target) (4:6) ->
       (ResolveAssemblyReferences target) ->
         C:\Program Files\dotnet\sdk\3.1.300\Microsoft.Common.CurrentVersion.targets(2081,5): warning MSB3277: Found conflicts between different versions of "System.Configuration.ConfigurationManager" that could not be resolved.  These reference conflicts are listed in the build log when log verbosity is set to detailed. [C:\git\github\TimeWarpEngineering\timewarp-templates\Source\TimeWarp.Blazor.Template\content\TimeWarp.Blazor\Tests\Server.Integration.Tests\TimeWarp.Blazor.Server.Integration.Tests.csproj]

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
@@ -29,7 +29,8 @@
     <MicrosoftAspNetCoreBlazorHttpClientVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreBlazorHttpClientVersion>
     <MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>$(MicrosoftAspNetCoreBlazorVersion)</MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>
     <SystemNetHttpJsonVersion>3.2.0</SystemNetHttpJsonVersion>
-    
+    <SystemConfigurationConfigurationManagerVersion>4.7.0</SystemConfigurationConfigurationManagerVersion>
+
     <MicrosoftAspNetCoreVersion>3.1.4</MicrosoftAspNetCoreVersion>    
     <MicrosoftAspNetCoreMvcTestingVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreMvcTestingVersion>
     <MicrosoftAspNetCoreTestHostVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreTestHostVersion>
