renamed content folder to more descriptive templates

--- a/Source/TimeWarp.Blazor.Template/TimeWarp.AspNetCore.Blazor.Templates.csproj
+++ b/Source/TimeWarp.Blazor.Template/TimeWarp.AspNetCore.Blazor.Templates.csproj
@@ -21,8 +21,8 @@
 
   <ItemGroup>
     <Content 
-      Include="content\**\*" 
-      Exclude="**\bin\**;**\obj\**;**\launchSettings.json;**\node_modules\**;**\*.user;**\.vs\**;**\.vscode\**;content\Directory.Build.*;**\.template.config.src\**"
+      Include="templates\**\*" 
+      Exclude="**\bin\**;**\obj\**;**\launchSettings.json;**\node_modules\**;**\*.user;**\.vs\**;**\.vscode\**;templates\Directory.Build.*;**\.template.config.src\**"
     />
     <Compile Remove="**\*" />
   </ItemGroup>
