--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -6,6 +6,11 @@
     <DisableImplicitComponentsAnalyzers>true</DisableImplicitComponentsAnalyzers>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+  
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>UseHttpSys</DefineConstants>
   </PropertyGroup>
