Add FluentValidationAspNetCoreVersion and MicroElementsSwashbuckleFluentValidationVersion

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Build.props
@@ -43,6 +43,7 @@
     <FixieVersion>2.2.1</FixieVersion>
     <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
     <FluentValidationVersion>8.6.2</FluentValidationVersion>
+    <FluentValidationAspNetCoreVersion>8.6.2</FluentValidationAspNetCoreVersion>
     <MediatrExtensionsMicrosoftDependencyInjectionVersion>8.0.0</MediatrExtensionsMicrosoftDependencyInjectionVersion>
     <MediatrVersion>8.0.1</MediatrVersion>
     <MoqVersion>4.14.1</MoqVersion>
@@ -50,6 +51,7 @@
     <SeleniumSupportVersion>3.141.0</SeleniumSupportVersion>
     <SeleniumWebDriverVersion>3.141.0</SeleniumWebDriverVersion>
     <ShouldlyVersion>3.0.2</ShouldlyVersion>
+    <MicroElementsSwashbuckleFluentValidationVersion>3.1.1</MicroElementsSwashbuckleFluentValidationVersion>
     <SwashbuckleAspNetCoreAnnotationsVersion>5.4.1</SwashbuckleAspNetCoreAnnotationsVersion>
     <SwashbuckleAspNetCoreSwaggerGenVersion>5.4.1</SwashbuckleAspNetCoreSwaggerGenVersion>
     <SwashbuckleAspNetCoreSwaggerUIVersion>5.4.1</SwashbuckleAspNetCoreSwaggerUIVersion>
