Move Pages into Features

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Application\Pages\" />
+    <Folder Include="Features\Counter\Pages\" />
+    <Folder Include="Features\WeatherForecast\Pages\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
