working on decent js template

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -26,5 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Api\TimeWarp.Blazor.Api.csproj" />
+    <ProjectReference Include="..\TypeScript\TimeWarp.Blazor.TypeScript.csproj" />
   </ItemGroup>
 </Project>
