--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build ./Source/Initialize.ts --no-minify --out-dir ../Client/wwwroot --out-file TimeWarpBlazor",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.9.7"
   }
 }
