--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint source --ext .ts",
+    "tailwinds": "tailwindcss build ../Client/wwwroot/css/input.css -o ../Client/wwwroot/css/site.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -14,7 +16,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.0.5",
+    "tailwindcss": "^1.5.1",
     "typescript": "^3.9.7"
   }
 }
