--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@tailwindcss/ui": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.5.0",
