--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/.editorconfig
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/.editorconfig
@@ -258,3 +258,6 @@ dotnet_code_quality.null_check_validation_methods = NotNull
 # CA1062: Validate arguments of public methods
 # TODO: Turn this back on when figure out how to get Dawn.Guard to not trigger it.
 dotnet_diagnostic.CA1062.severity = silent
+
+# CA1308: Normalize strings to uppercase
+dotnet_diagnostic.CA1308.severity = none
