--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint source --ext .ts",
-    "tailwinds": "tailwindcss build ../Client/wwwroot/css/input.css -o ../Client/wwwroot/css/site.css",
+    "tailwinds": "tailwindcss build ./css/input.css -o ../Client/wwwroot/css/site.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
