Add BlazorComponentUtilities makes custom css easier

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="BlazorComponentUtilities" Version="$(BlazorComponentUtilitiesVersion)" />
     <PackageReference Include="Blazor-State" Version="$(BlazorStateVersion)" />
     <PackageReference Include="Dawn.Guard" Version="$(DawnGuardVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="$(MicrosoftAspNetCoreComponentsWebAssemblyVersion)" />
