--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -44,4 +44,8 @@
   <ItemGroup>
     <Folder Include="Entities\X_Aggregate\Requests\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Watch Include="..\**\*.razor" />
+  </ItemGroup>
 </Project>
