--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/EndToEnd.TestCafe.Tests/TimeWarp.Blazor.EndToEnd.TestCafe.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/EndToEnd.TestCafe.Tests/TimeWarp.Blazor.EndToEnd.TestCafe.Tests.csproj
@@ -1,8 +1,7 @@
 ﻿<!--A Sdk version is required see nuget for available versions-->
 <Project Sdk="Microsoft.Build.NoTargets/1.0.80">
   <PropertyGroup>
-    <!--Even though the TargetFramework is NOT used it is required in order to be able to open in Visual Studio-->
-    <TargetFramework>$(TestProjectTargetFramework)</TargetFramework>
+    <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <Target Name="Just A Message" AfterTargets="Build">
